BJS2-41049: MVP worked task